--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,14 +9,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Run pytest
         env:
           UNIT_TEST: "1"
+          # Ensure the repo root is on Python's import path (so 'from api.main import app' works)
+          PYTHONPATH: ${{ github.workspace }}
         run: pytest -q
