--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ name: CI
 on:
   push:
   pull_request:
+  workflow_dispatch:
 
 jobs:
   test:
@@ -14,14 +15,21 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install deps
+      - name: Install deps (requirements + pytest)
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python -m pip install --upgrade -r requirements.txt
+          python -m pip install --upgrade pytest
+
+      - name: Show env
+        run: |
+          python -V
+          python -c "import sys; print('exe:', sys.executable)"
+          python -c "import pkgutil; print('has pytest:', bool(pkgutil.find_loader('pytest')))"
+          python -c "import fastapi, pydantic; print('fastapi', fastapi.__version__, 'pydantic', pydantic.__version__)"
 
       - name: Run pytest
         env:
           UNIT_TEST: "1"
-          # Ensure the repo root is on Python's import path (so 'from api.main import app' works)
           PYTHONPATH: ${{ github.workspace }}
-        run: pytest -q
+        run: python -m pytest -q
